force-app/main/default/objects/Daily_KPIs_By_Course__c/Daily_KPIs_By_Course__c.object-meta.xml
<CustomObject>
    <label>Daily KPIs By Course</label>
    <nameField>
        <displayFormat>DKC-{0000}</displayFormat>
        <label>Daily KPIs By Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily KPIs By Course</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>