force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/ATT_Day__c.field-meta.xml
<CustomField>
    <fullName>ATT_Day__c</fullName>
    <label>ATT/Day</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>