force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Avg_talk_Time_Per_BD__c.field-meta.xml
<CustomField>
    <fullName>Avg_talk_Time_Per_BD__c</fullName>
    <label>Avg talk Time Per BD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>