force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Called_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Called_Conversion__c</fullName>
    <label>Called Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>