force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Called_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Called_Percentage__c</fullName>
    <label>Called Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>