force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Course_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Course_Interested_In__c</fullName>
    <label>Course Interested In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>