force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Daily_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Daily_KPIs__c</fullName>
    <label>Daily KPIs</label>
    <referenceTo>Daily_KPIs__c</referenceTo>
    <relationshipLabel>Daily KPIs By Course</relationshipLabel>
    <relationshipName>Daily_KPIs_By_Course</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>