force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Early_Logged_Out__c.field-meta.xml
<CustomField>
    <fullName>Early_Logged_Out__c</fullName>
    <label>Early Logged Out</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>