force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Effective_AHT__c.field-meta.xml
<CustomField>
    <fullName>Effective_AHT__c</fullName>
    <label>Effective - AHT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>