force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Effective_Talk_Time_ETT__c.field-meta.xml
<CustomField>
    <fullName>Effective_Talk_Time_ETT__c</fullName>
    <label>Effective Talk Time - ETT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>