force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Not_Connected_After_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>Not_Connected_After_Logged_In__c</fullName>
    <label>Not Connected After Logged In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>