force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Order_made_Today__c.field-meta.xml
<CustomField>
    <fullName>Order_made_Today__c</fullName>
    <label>Order made Today</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>