force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Order_Projection__c.field-meta.xml
<CustomField>
    <fullName>Order_Projection__c</fullName>
    <label>Order Projection</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>