force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <label>Orders From Today&apos;s Created Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>