force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue From Today&apos;s Created Leads</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>