force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Revenue_BD__c.field-meta.xml
<CustomField>
    <fullName>Revenue_BD__c</fullName>
    <label>Revenue/BD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>