force-app/main/default/objects/Daily_KPIs_By_Course__c/fields/Revenue_Generated_Today__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Generated_Today__c</fullName>
    <label>Revenue Generated Today</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>